examples/negative/effects_phase2/m7b_12_row_var_two_vars.kai
# m7b #12 negative — two row variables in the same row are
# rejected. kaikai picks the simpler tail-variable semantics:
# a row carries at most one row variable, in tail position.

effect Io {
  print(s: String) : Unit
}

fn bad(body: () -> Unit / e + r) : Unit / e + r = body()

fn main() : Int { 0 }
