examples/negative/effects_phase2/m7b_12_row_var_two_vars.err.expected
error: row variable must be the last item in the row
  --> examples/negative/effects_phase2/m7b_12_row_var_two_vars.kai:9:29
    |
  9 | fn bad(body: () -> Unit / e + r) : Unit / e + r = body()
    |                             ^
